# TropicalBoom

./: CGame  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_suite
include/: Camera.h  GameWindow.h  Model.h  Renderer.h  Scene.h  Shader.h
include/Light/: DirectionalLight.h  Light.h  PointLight.h
include/glad/: gl.h
shaders/: fragment_shader.glsl  shadow_fragment_shader.glsl  vertex_shader.glsl
src/: Camera.cpp  GameWindow.cpp  Model.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  gl.c  main.cpp
src/Light/: DirectionalLight.cpp  PointLight.cpp
tests/: test_shader.cpp
